a ton of stuff i don't even

--- a/war/index.html
+++ b/war/index.html
@@ -19,7 +19,7 @@
     	<form name="push" id="push_form" onsubmit="return false">
     		<input type="text" placeholder="majorId" name="majorId">
     		<input type="text" placeholder="minorId" name="minorId">
-    		<input type="text" placeholder="plusId" name="plusId">
+    		<input type="text" placeholder="email" name="email">
     		<input type="text" placeholder="accessToken" name="accessToken">
     		<input type="submit" value="push">
     	</form>
